--- a/views/stories/add.hbs
+++ b/views/stories/add.hbs
@@ -20,7 +20,7 @@
 
         <div class="row">
             <div class="input-field">
-                <h5>Tell us yout Story:</h5>
+                <h5>Tell us your Story:</h5>
                 <textarea name="body" id="body"></textarea>
             </div>
         </div>
