--- a/views/stories/edit.hbs
+++ b/views/stories/edit.hbs
@@ -23,7 +23,7 @@
 
         <div class="row">
             <div class="input-field">
-                <h5>Tell us yout Story:</h5>
+                <h5>Tell us your Story:</h5>
                 <textarea name="body" id="body">{{story.body}}</textarea>
             </div>
         </div>
