--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -19,6 +19,8 @@
         {{{body}}}
     </div>
 
+    {{> _footer}}
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <script>
