--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,10 +13,12 @@
 </head>
 
 <body>
-    {{> _header}}
-    {{> _add_btn_story}}
-    <div class="container">
-        {{{body}}}
+    <div class="main-content">
+        {{> _header}}
+        {{> _add_btn_story}}
+        <div class="container">
+            {{{body}}}
+        </div>
     </div>
 
     {{> _footer}}
